--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="antialiased">
     <div id="splash-screen">
-    <video id="splash-video" src="Assets/Logo_animation.mp4" autoplay muted playsinline></video>
+    <video id="splash-video" src="Assets/Logo_animation_2.0.mp4" autoplay muted playsinline></video>
     </div>
     <div id="main-container" class="hide">
         <div class="min-h-screen flex flex-col">
